don't let a form widget keep a blinking cursor when the focus is changed to an external widget (e.g. the location bar)

BUG: 155941

svn path=/trunk/KDE/kdelibs/; revision=1089661